--- a/word-search.html
+++ b/word-search.html
@@ -1,27 +1,27 @@
 <html>
     <div class="container" style="height: fit-content; width: fit-content; position: relative">
         <img src="word-search.png" style="width: 100%">
-        <img id="pi-1" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 32%; left: 8%;">
-        <img id="pi-2" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 32%; left: 31%;">
-        <img id="pi-3" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 32%; left: 54%;">
-        <img id="pi-4" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 32%; left: 78%;">
-        <img id="pi-5" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 49.5%; left: 8%;">
-        <img id="pi-6" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 49.5%; left: 31%;">
-        <img id="pi-7" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 49.5%; left: 54%;">
-        <img id="pi-8" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 49.5%; left: 78%;">
-        <img id="pi-9" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 67%; left: 8%;">
-        <img id="pi-10" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 67%; left: 31%;">
-        <img id="pi-11" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 67%; left: 54%;">
-        <img id="pi-12" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 67%; left: 78%;">
+        <img id="ws-1" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 32%; left: 8%;">
+        <img id="ws-2" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 32%; left: 31%;">
+        <img id="ws-3" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 32%; left: 54%;">
+        <img id="ws-4" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 32%; left: 78%;">
+        <img id="ws-5" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 49.5%; left: 8%;">
+        <img id="ws-6" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 49.5%; left: 31%;">
+        <img id="ws-7" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 49.5%; left: 54%;">
+        <img id="ws-8" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 49.5%; left: 78%;">
+        <img id="ws-9" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 67%; left: 8%;">
+        <img id="ws-10" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 67%; left: 31%;">
+        <img id="ws-11" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 67%; left: 54%;">
+        <img id="ws-12" class="book-icon" onclick="boxClicked(event)" src="lupa.png" style="top: 67%; left: 78%;">
     </div>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
     $(window).on('load', function(){
         for(let i = 1; i < 25; i++){
-            let element = localStorage.getItem('pi-' + i);
+            let element = localStorage.getItem('ws-' + i);
             if(element === 'on'){
-                $('#pi-'+i).addClass('on');
+                $('#ws-'+i).addClass('on');
             }
         }
     });
