Update the prompt icon

--- a/summer-widget.html
+++ b/summer-widget.html
@@ -3,7 +3,7 @@
         <img src="tbr_template.png" style="width: 100%">
         <div id="summer-tbr-prompt-1" class="tbr-prompt" style="top: 26.5%; left: 4%;" onclick="doneToggle(event)">
             <img class="book-cover" src="book-cover-placeholder.png" alt="Book Cover">
-            <img class="complete hidden" src="complete.png" alt="Complete">
+            <img class="complete hidden" src="campfire.png" alt="Complete">
             <div class="prompt-overlay"></div>
             <div class="prompt-buttons">
                 <button class="clear-btn hidden" onclick="clearCover(event)" value="clear">Clear</button>
@@ -13,7 +13,7 @@
         </div>
         <div id="summer-tbr-prompt-2" class="tbr-prompt" style="top: 26.5%; left: 35.5%;" onclick="doneToggle(event)">
             <img class="book-cover" src="book-cover-placeholder.png" alt="Book Cover">
-            <img class="complete hidden" src="complete.png" alt="Complete">
+            <img class="complete hidden" src="campfire.png" alt="Complete">
             <div class="prompt-overlay"></div>
             <div class="prompt-buttons">
                 <button class="clear-btn hidden" onclick="clearCover(event)" value="clear">Clear</button>
@@ -23,7 +23,7 @@
         </div>
         <div id="summer-tbr-prompt-3" class="tbr-prompt" style="top: 26.5%; left: 67%;" onclick="doneToggle(event)">
             <img class="book-cover" src="book-cover-placeholder.png" alt="Book Cover">
-            <img class="complete hidden" src="complete.png" alt="Complete">
+            <img class="complete hidden" src="campfire.png" alt="Complete">
             <div class="prompt-overlay"></div>
             <div class="prompt-buttons">
                 <button class="clear-btn hidden" onclick="clearCover(event)" value="clear">Clear</button>
@@ -33,7 +33,7 @@
         </div>
         <div id="summer-tbr-prompt-4" class="tbr-prompt" style="top: 59.2%; left: 4%;" onclick="doneToggle(event)">
             <img class="book-cover" src="book-cover-placeholder.png" alt="Book Cover">
-            <img class="complete hidden" src="complete.png" alt="Complete">
+            <img class="complete hidden" src="campfire.png" alt="Complete">
             <div class="prompt-overlay"></div>
             <div class="prompt-buttons">
                 <button class="clear-btn hidden" onclick="clearCover(event)" value="clear">Clear</button>
@@ -43,7 +43,7 @@
         </div>
         <div id="summer-tbr-prompt-5" class="tbr-prompt" style="top: 59.2%; left: 35.5%;" onclick="doneToggle(event)">
             <img class="book-cover" src="book-cover-placeholder.png" alt="Book Cover">
-            <img class="complete hidden" src="complete.png" alt="Complete">
+            <img class="complete hidden" src="campfire.png" alt="Complete">
             <div class="prompt-overlay"></div>
             <div class="prompt-buttons">
                 <button class="clear-btn hidden" onclick="clearCover(event)" value="clear">Clear</button>
@@ -53,7 +53,7 @@
         </div>
         <div id="summer-tbr-prompt-6" class="tbr-prompt" style="top: 59.2%; left: 67%;" onclick="doneToggle(event)">
             <img class="book-cover" src="book-cover-placeholder.png" alt="Book Cover">
-            <img class="complete hidden" src="complete.png" alt="Complete">
+            <img class="complete hidden" src="campfire.png" alt="Complete">
             <div class="prompt-overlay"></div>
             <div class="prompt-buttons">
                 <button class="clear-btn hidden" onclick="clearCover(event)" value="clear">Clear</button>
@@ -118,6 +118,7 @@
     .complete {
         max-width: 80%;
         position: absolute;
+        opacity: 0.9;
     }
 
     .hidden {
