updated bingo board

--- a/ashkelsummer.html
+++ b/ashkelsummer.html
@@ -1,6 +1,6 @@
 <html>
     <div class="container" style="height: fit-content; width: fit-content; position: relative">
-        <img src="BingoforKel.png" style="width: 100%">
+        <img src="BingoforKel.jpeg" style="width: 100%">
         <img id="ashkel-1" class="bookmark-icon" onclick="boxClicked(event)" src="book-bookmark-icon-5.png" style="top: 28.4%; left: 10.2%;">
         <img id="ashkel-2" class="bookmark-icon" onclick="boxClicked(event)" src="book-bookmark-icon-5.png" style="top: 28.4%; left: 27.2%;">
         <img id="ashkel-3" class="bookmark-icon" onclick="boxClicked(event)" src="book-bookmark-icon-5.png" style="top: 28.4%; left: 44%;">
