fixed error with 6 landing but showing 1

--- a/throneopoly/board-widget.html
+++ b/throneopoly/board-widget.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <html>
-    <div class="container" style="height: fit-content; width: fit-content; position: relative;">
+    <div class="container" style="height: fit-content; width: 100%; position: relative;">
         <img src="board.png" style="width: 100%">
         <!-- PIECE -->
         <img src="piece.png" class="piece hidden" id="piece">
@@ -389,7 +389,7 @@
                 return "five";
                 break;
             case 6:
-                return "one";
+                return "six";
                 break;
         }
     }
